--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
     <canvas id="displayBaseImage" width="300" height="300"></canvas>
     <hr>
 
+
+    <input type="text" id="debuggingStretchTest">
+    <input type="text" id="debuggingShifttest">
+
+    <hr>
     <h3>The Masterpiece</h3>
     <canvas id="displayMinecraftBlockConstruction"></canvas>
 
