--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   </head>
 
-  <body>
+  <body onload="loadImages()">
 
     <input type="text" id="debuggingStretchTest">
     <input type="text" id="debuggingShifttest">
