--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <hr>
 
     <p>Select an image to render</p>
-    <select id="image-select">
+    <select id="imageSelector">
 
       <option value="shrek.jpg">Vad gör du i mitt träsk?</option>
       <option value="endgame-poster.jpg">Minceraft: Endergame</option>
