--- a/index.html
+++ b/index.html
@@ -5,33 +5,86 @@
 
     <title>Minecraft Pixel Art Maker</title>
 
-    <script src="minecraftPixelArtBuilder.js" type="text/javascript">
+    <script src="minecraftPixelArtBuilder.js" type="text/javascript"></script>
+
+    <style media="screen">
 
 
+      p {
 
-    </script>
+        font-family: bahnschrift;
+        padding-bottom: -20px;
+
+      }
+
+      img {
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 5px;
+        width: 150px;
+      }
+
+      .button {
+
+        background-color: #870bbd;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        font-family: bahnschrift;
+
+      }
+
+      .container {
+
+        display: block;
+        position: relative;
+        padding-left: 35px;
+        margin-bottom: 12px;
+        cursor: pointer;
+        font-size: 22px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+
+      }
+
+    </style>
 
   </head>
 
   <body onload="loadImages()">
 
-    <p>Vertical Block Count</p>
-    <input type="text" id="verticalBlockCountTextBox">
-    <p id="resolutionRatioErrorMessage"></p>
-    <br>
-    <input type="button" onclick="getUserInputValues()" id="submit" value="Submit">
-    <br>
 
-    <h5>Induce Horizontal Blend</h5>
-    <input type="checkbox" name="Induce Horizontal Blend" id="induceHorizontalBlendingCheckbox">
-    <br>
+
+    <p>Vad gör du i mitt träsk?</p>
+    <img src="shrek.jpg" width="200px">
+
     <hr>
 
-    <p>Select an image to render</p>
-    <select id="imageSelector">
+    <p>Croc of Protein</p>
+    <img src="endgame-poster.jpg" width="200px">
+
+    <hr>
+
+    <p>Sorry aboot that eh?</p>
+    <img src="pancakes.jpg" width="200px">
+
+    <hr>
+
+    <p>REQUESTED VERTICAL PIXEL COUNT (RANGE: 10 - 200)</p>
+    <input type="text" class="button" id="verticalBlockCountTextBox">
+    <p id="resolutionRatioErrorMessage"></p>
+
+    <p>SELECT AN IMAGE</p>
+    <select id="imageSelector" class="button">
 
       <option value="shrek.jpg">Vad gör du i mitt träsk?</option>
-      <option value="endgame-poster.jpg">Minceraft: Endergame</option>
+      <option value="endgame-poster.jpg">Croc of Protein</option>
       <option value="pancakes.jpg">Sorry aboot that eh?</option>
 
     </select>
@@ -39,27 +92,19 @@
 
     <hr>
 
-    <p>Vad gör du i mitt träsk?</p>
-    <img src="shrek.jpg" width="200px">
+    <p>CLICK HERE TO RENDER YOUR MASTERPIECE!</p>
+    <input type="button" class="button" onclick="getUserInputValues()" id="submit" value="SUBMIT">
 
     <hr>
-    <p>Minceraft: Endergame</p>
-    <img src="endgame-poster.jpg" width="200px">
-    <hr>
 
-    <p>Sorry aboot that eh?</p>
-    <img src="pancakes.jpg" width="200px">
-    <hr>
-
-    <p>Selected Image</p>
+    <p>IMAGE PREVIEW</p>
     <canvas id="displayBaseImage" width="300" height="300"></canvas>
     <hr>
 
 
 
-
     <hr>
-    <h3>The Masterpiece</h3>
+    <p>THE MASTERPIECE</p>
     <canvas id="displayMinecraftBlockConstruction"></canvas>
 
   </body>
