--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <br>
 
 
-    <p>VERTICAL RESOLUTION (RANGE: 10 - 200)</p>
+    <p>HORIZONTAL RESOLUTION (RANGE: 10 - 200)</p>
     <input type="text" class="button" style="font-size: 70px; width: 150px" id="verticalBlockCountTextBox">
     <p id="resolutionRatioErrorMessage"></p>
 
