--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <img src="shrek.jpg" height="275px">
     <img src="endgame-poster.jpg" height="275px">
     <img src="pancakes.jpg" height="275px">
-    <img src="steve.jpg" height="275px">
+    <img src="stairPug.jpg" height="275px">
 
     <br>
 
@@ -92,7 +92,7 @@
       <option value="shrek.jpg">Vad gör du i mitt träsk?</option>
       <option value="endgame-poster.jpg">Croc of Protein</option>
       <option value="pancakes.jpg">Sorry aboot that eh?</option>
-      <option value="steve.jpg">Sbeve Turtles</option>
+      <option value="stairPug.jpg">Stair Pug</option>
 
     </select>
 
