--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
     <img src="endgame-poster.jpg" height="275px">
     <img src="pancakes.jpg" height="275px">
     <img src="avengersLevelThreat.jpg" height="275px">
+    <img src="pug.jpg" height="275px">
+
 
     <br>
 
@@ -93,6 +95,7 @@
       <option value="endgame-poster.jpg">Croc of Protein</option>
       <option value="pancakes.jpg">Sorry aboot that eh?</option>
       <option value="avengersLevelThreat.jpg">Now This Is An Avengers Level Threat</option>
+      <option value="pug.jpg">Doggos</option>
 
     </select>
 
