--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <body onload="loadImages()">
 
     <p style="font-size: 70px">MINECRAFT PIXEL ART MAKER</p>
+    <p>NOTE: For best effect on PC, open the developer console (F12)</p>
 
     <br>
 
