--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
 
       }
 
+      #myBar {
+        width: 0%;
+        height: 50px;
+        background-color: #870bbd;
+        text-align: center; /* To center it horizontally (if you want) */
+        font-family: bahnschrift;
+        font-size: 30pt;
+        line-height: 50px; /* To center it vertically */
+        color: white;
+      }
+
       .container {
         overflow: hidden;
         display: block;
@@ -71,7 +82,6 @@
   <body onload="loadImages()">
 
     <p style="font-size: 70px">MINECRAFT PIXEL ART MAKER</p>
-    <p>NOTE: For best effect on PC, open the developer console (F12)</p>
 
     <br>
 
@@ -100,11 +110,16 @@
 
     </select>
 
-
     <br>
 
     <p>CLICK HERE TO RENDER YOUR MASTERPIECE!</p>
     <input type="button" class="button" onclick="getUserInputValues()" id="submit" value="SUBMIT">
+
+    <br><br>
+
+    <div id="myProgress">
+      <div id="myBar">0%</div>
+    </div>
 
     <br>
 
