--- a/index.html
+++ b/index.html
@@ -43,17 +43,6 @@
 
       }
 
-      #myBar {
-        width: 0%;
-        height: 50px;
-        background-color: #870bbd;
-        text-align: center; /* To center it horizontally (if you want) */
-        font-family: bahnschrift;
-        font-size: 30pt;
-        line-height: 50px; /* To center it vertically */
-        color: white;
-      }
-
       .container {
         overflow: hidden;
         display: block;
@@ -82,6 +71,7 @@
   <body onload="loadImages()">
 
     <p style="font-size: 70px">MINECRAFT PIXEL ART MAKER</p>
+    <p>NOTE: The program might look like it is crashing when you press the button, but it isn't. (Proof: Press F12 before pushing the button)</p>
 
     <br>
 
@@ -114,12 +104,6 @@
 
     <p>CLICK HERE TO RENDER YOUR MASTERPIECE!</p>
     <input type="button" class="button" onclick="getUserInputValues()" id="submit" value="SUBMIT">
-
-    <br><br>
-
-    <div id="myProgress">
-      <div id="myBar">0%</div>
-    </div>
 
     <br>
 
